fix virtuoso jumps posts to bottom

--- a/src/components/ScrollSeekLoader.module.css
+++ b/src/components/ScrollSeekLoader.module.css
@@ -1,1 +1,3 @@
-.scrollSeekItem {}
+.scrollSeekItem {
+  min-height: 250px;
+}
